# cloud-chaser

./: .gitignore  README.md  cloud_chaser_kaggle.ipynb  export.py  inference.py  pyproject.toml  requirements.txt  setup-and-run.md  train.py
cloud_chaser/: __init__.py  evaluation.py  inference_pipeline.py  training.py
cloud_chaser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cloud_chaser/data/: augmentations.py  gcd.py  swimseg.py  tjnu.py
cloud_chaser/models/: detector.py  simclr.py
cloud_chaser/utils/: visualization.py
configs/: default.yaml
data/: README.md
docs/: README.md  academic_pipeline.md  setup-and-run.md  unet_restructure_plan.md
kaggle/: README.md  cloud_chaser_kaggle.ipynb
local-exec/: README.md  export.py  inference.py  pyproject.toml  train.py
local-exec/cloud_chaser/: config.py  inference_pipeline.py  training.py
local-exec/cloud_chaser/data/: ade20k.py  augmentations.py  swimseg.py
local-exec/cloud_chaser/models/: classifier.py  detector.py  unet.py
local-exec/cloud_chaser/utils/: checkpoint.py  metrics.py  seed.py
local-exec/configs/: default.yaml
local-exec/scripts/: build_cloud_crops.py  gcd_visual_report.py  prepare_ade20k_yolo.py  unet_ablation_report.py
models/: README.md
results/: README.md
scripts/: build_cloud_crops.py  gcd_visual_report.py  prepare_swimseg_yolo.py
